examples/neg/TernaerOper-Neg1.iml
// no bool type as condition
program ternaereOperatorNeg()
do
  debugout 1 ? 1 : 2
endprogram